[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts_gd/rightHand.gd" type="Script" id=1]
[ext_resource path="res://scripts_gd/leftHand.gd" type="Script" id=2]
[ext_resource path="res://notTooBright.tres" type="Material" id=3]

[sub_resource type="BoxShape" id=1]
margin = 0.001
extents = Vector3( 0.05, 0.05, 0.05 )

[sub_resource type="SpatialMaterial" id=2]

[sub_resource type="CubeMesh" id=3]
material = SubResource( 2 )
size = Vector3( 0.1, 0.1, 0.1 )

[sub_resource type="BoxShape" id=4]
margin = 0.001
extents = Vector3( 0.01, 0.01, 0.01 )

[sub_resource type="CubeMesh" id=5]
size = Vector3( 0.005, 5, 0.005 )

[sub_resource type="Shader" id=6]
code = "shader_type spatial;

render_mode unshaded;

void fragment(){
	
	vec2 uv = (FRAGCOORD.xy/VIEWPORT_SIZE).xy;
	
	float calced = sin(uv.x*1000.0);
	ALBEDO = vec3( 1.0, tan((sin(uv.x)-cos(uv.y+(TIME*10.0))*TIME)*1000.0),.4  );
	//ALPHA = (EMISSION.r+EMISSION.g+EMISSION.b)/3.0;
	//ALBEDO = vec3(0,0,0);
}"

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 6 )

[node name="player" type="ARVROrigin"]

[node name="ARVRCamera" type="ARVRCamera" parent="."]
near = 0.01
far = 8192.0

[node name="rightHand" type="ARVRController" parent="."]
controller_id = 2
script = ExtResource( 1 )

[node name="rightHandArea" type="Area" parent="rightHand"]
input_ray_pickable = false
gravity_vec = Vector3( 0, 0, 0 )
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0

[node name="CollisionShape" type="CollisionShape" parent="rightHand/rightHandArea"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="rightHand/rightHandArea/CollisionShape"]
mesh = SubResource( 3 )
material/0 = ExtResource( 3 )

[node name="rightHandGrab" type="Generic6DOFJoint" parent="rightHand"]
nodes/node_a = NodePath("../rightHandBody")

[node name="rightHandBody" type="KinematicBody" parent="rightHand"]

[node name="CollisionShape" type="CollisionShape" parent="rightHand/rightHandBody"]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0 )
shape = SubResource( 4 )
disabled = true

[node name="rightHandRay" type="RayCast" parent="rightHand/rightHandBody"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0 )
visible = false
cast_to = Vector3( 0, 5, 0 )

[node name="MeshInstance" type="MeshInstance" parent="rightHand/rightHandBody/rightHandRay"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0 )
cast_shadow = 0
mesh = SubResource( 5 )
material/0 = SubResource( 7 )

[node name="leftHand" type="ARVRController" parent="."]
script = ExtResource( 2 )

[node name="leftHandArea" type="Area" parent="leftHand"]
input_ray_pickable = false
gravity_vec = Vector3( 0, 0, 0 )
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0

[node name="CollisionShape" type="CollisionShape" parent="leftHand/leftHandArea"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="leftHand/leftHandArea/CollisionShape"]
mesh = SubResource( 3 )
material/0 = ExtResource( 3 )

[node name="leftHandGrab" type="Generic6DOFJoint" parent="leftHand"]
nodes/node_a = NodePath("../leftHandBody")
angular_limit_x/erp = 1000.0
angular_limit_y/erp = 1000.0
angular_limit_z/erp = 1000.0
precision = 1000

[node name="leftHandBody" type="KinematicBody" parent="leftHand"]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="leftHand/leftHandBody"]
shape = SubResource( 4 )
disabled = true

[node name="leftHandRay" type="RayCast" parent="leftHand/leftHandBody"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0 )
visible = false
cast_to = Vector3( 0, 5, 0 )

[node name="MeshInstance2" type="MeshInstance" parent="leftHand/leftHandBody/leftHandRay"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 7 )
[connection signal="button_pressed" from="rightHand" to="rightHand" method="_on_rightHand_button_pressed"]
[connection signal="button_release" from="rightHand" to="rightHand" method="_on_rightHand_button_release"]
[connection signal="body_entered" from="rightHand/rightHandArea" to="rightHand" method="_on_rightHandArea_body_entered"]
[connection signal="body_exited" from="rightHand/rightHandArea" to="rightHand" method="_on_rightHandArea_body_exited"]
[connection signal="button_pressed" from="leftHand" to="leftHand" method="_on_leftHand_button_pressed"]
[connection signal="button_release" from="leftHand" to="leftHand" method="_on_leftHand_button_release"]
[connection signal="body_entered" from="leftHand/leftHandArea" to="leftHand" method="_on_leftHandArea_body_entered"]
[connection signal="body_exited" from="leftHand/leftHandArea" to="leftHand" method="_on_leftHandArea_body_exited"]
